--- a/xFlexAPI/Info.plist
+++ b/xFlexAPI/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>0.7</string>
 	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<string>4</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2017 Douglas Adams. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
